--- a/src/main/webapp/css/index.css
+++ b/src/main/webapp/css/index.css
@@ -21,20 +21,26 @@ a {
   border-bottom: 1px solid rgba(102, 102, 102, 0.5);
 }
 .topContainer .nav {
-  height: 40px;
+  height: 36px;
   color: #fff;
   background-color: #5d759d;
 }
 .topContainer .nav .navContainer {
   margin: 0px auto;
-  width: 1100px;
+  width: 1190px;
 }
 .topContainer .nav .navContainer ul li {
-  margin: 10px 20px;
+  padding: 8px 20px;
   cursor: pointer;
+}
+.topContainer .nav .navContainer .localIn {
+  padding-bottom: 4px;
+  color: #5d759d;
+  background-color: rgba(255, 255, 255, 0.8);
 }
 .topContainer .nav .navContainer .leftNav {
   float: left;
+  margin-left: 190px;
 }
 .topContainer .nav .navContainer .rightNav {
   float: right;
@@ -47,24 +53,26 @@ a {
   display: inline-block;
 }
 .topContainer .topHandle .topLogo {
-  margin-left: 30px;
+  margin-left: 88px;
 }
 .topContainer .topHandle .topLogo img {
   float: left;
-  height: 32px;
+  height: 34px;
 }
 .topContainer .topHandle .topLogo span {
   margin-left: 10px;
   font-size: 24px;
-  color: #5d759d;
 }
 .topContainer .topHandle .searchGoods {
-  margin: 0% 5% 0% 40%;
+  margin: 0% 5% 0% 20%;
+  padding: 4px;
+  width: 280px;
   border: 2px solid #5d759d;
   border-radius: 5px;
 }
 .topContainer .topHandle .searchGoods input {
   margin: 3px;
+  width: 232px;
   border: none;
   outline: none;
 }
@@ -84,8 +92,9 @@ a {
   border: none;
   outline: none;
   border-radius: 5px;
-  padding: 2px 8px;
+  padding: 9px 18px;
   margin: 0 10px;
+  font-size: 16px;
   color: #ffffff;
   background-color: rgba(246, 146, 138, 0.5);
   cursor: pointer;
@@ -96,11 +105,13 @@ a {
 }
 .topBanner .menuwrap {
   margin: 0px auto;
-  width: 1100px;
+  width: 1030px;
 }
 .topBanner .menuwrap > div {
   display: inline-block;
+  width: 150px;
   border: 1px solid rgba(102, 102, 102, 0.5);
+  text-align: center;
   cursor: pointer;
 }
 .topBanner .menuwrap > div > span {
@@ -121,6 +132,9 @@ a {
 }
 .topBanner .menuwrap .allClassify > ul {
   position: absolute;
+  left: 0px;
+  top: 100%;
+  width: 100%;
   text-align: center;
   background-color: rgba(255, 255, 255, 0.8);
 }
@@ -139,13 +153,15 @@ a {
   left: 0px;
   width: 1000px;
   padding: 10px 20px;
-  background-color: rgba(255, 255, 255, 0.8);
+  background-color: #fff;
 }
 .topBanner .menuwrap .allClassify .detailedContent > div {
   float: left;
   width: 28%;
   height: 120px;
   margin: 5px 20px;
+  text-align: left;
+  text-indent: 5px;
 }
 .topBanner .menuwrap .allClassify .detailedContent > div h4 {
   margin: 4px 0px;
@@ -154,6 +170,15 @@ a {
 .topBanner .menuwrap .allClassify .detailedContent > div > a {
   display: inline-block;
   width: 45%;
+  margin: 1px 0px;
+  font-size: 14px;
+  color: #666666;
+}
+.topBanner .menuwrap .allClassify .detailedContent > div > a:hover {
+  color: #333333;
+}
+.topBanner .menuwrap .otherClassify {
+  transform: translateX(-5px);
 }
 .topBanner .imgPlayBox {
   width: 100%;
@@ -161,7 +186,7 @@ a {
 }
 .topBanner .imgPlayBox .imgContainer img {
   width: 100%;
-  height: 276px;
+  height: 284px;
 }
 main {
   margin: 50px auto;
@@ -181,7 +206,7 @@ main .announce > img {
 main .announce .moreAnnounce {
   position: absolute;
   top: 0px;
-  right: 10px;
+  right: 0px;
 }
 main .announce .moreAnnounce:hover {
   color: #5d759d;
@@ -190,7 +215,13 @@ main .announce p {
   margin-bottom: 0px;
 }
 main .announce p .announceContent {
+  display: inline-block;
+  width: 500px;
   margin-left: 50px;
+  font-size: 14px;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
   color: #666666;
 }
 main .announce p .announceContent:hover {
@@ -198,6 +229,7 @@ main .announce p .announceContent:hover {
 }
 main .announce p .announceTime {
   margin-left: 20px;
+  font-size: 14px;
 }
 main .leftHandle,
 main .rightHandle {
@@ -310,9 +342,9 @@ main .specialGoods .specialTitle .borderNew {
 }
 main .specialGoods .specialTitle .more {
   float: right;
-}
-main .specialGoods .specialTitle .more:hover {
-  color: #5d759d;
+  padding: 4px;
+  background-color: #5d759d;
+  color: #fff;
 }
 main .specialGoods .specialTitle .show > span:first-child {
   animation: titleShow .5s linear 0s 1 forwards;
