--- a/src/main/webapp/less/index.less
+++ b/src/main/webapp/less/index.less
@@ -28,23 +28,31 @@ a{
 @fontColor:#666;
 @fontHoverColor:#333;
 // @changeColor:#333333;
+
+//顶部容器
 .topContainer{
     border-bottom: 1px solid @borderColor;
     .nav{
-        height: 40px;
+        height: 36px;
         color: #fff;
         background-color: @toppicColor;
         .navContainer{
             margin: 0px auto;
-            width: 1100px;
+            width: 1190px;
             ul{
                 li{
-                    margin: 10px 20px;
+                    padding: 8px 20px;
                     cursor: pointer;
                 }
             }
+            .localIn{
+                padding-bottom: 4px;
+                color: @toppicColor;
+                background-color: rgba(255,255,255,.8);
+            }
             .leftNav{
                 float: left;
+                margin-left: 190px;
             }
             .rightNav{
                 float: right;
@@ -65,24 +73,25 @@ a{
             display: inline-block;
         }
         .topLogo{
-            margin-left: 30px;
+            margin-left: 88px;
             img{
                 float: left;
-                height: 32px;
+                height: 34px;
             }
             span{
                 margin-left: 10px;
                 font-size: 24px;
-                color: @toppicColor;
             }
         }
         .searchGoods{
-            // float: right;
-            margin:0% 5% 0% 40%;
+            margin:0% 5% 0% 20%;
+            padding: 4px;
+            width: 280px;
             border: 2px solid @toppicColor;
             border-radius: 5px;
             input{
                 margin: 3px;
+                width: 232px;
                 .inputNoBorder;
             }
             img{
@@ -103,8 +112,9 @@ a{
             button{
                 .inputNoBorder;
                 border-radius: 5px;
-                padding: 2px 8px;
+                padding: 9px 18px;
                 margin: 0 10px;
+                font-size: 16px;
                 color: rgb(255,255,255);
                 background-color: @topInputColor;
                 cursor: pointer;
@@ -113,15 +123,18 @@ a{
     }
 }
 
+//顶部横幅
 .topBanner{
     position: relative;
     color: @fontColor;
     .menuwrap{
         margin: 0px auto;
-        width: 1100px;
+        width: 1030px;
         >div{
             display: inline-block;
+            width: 150px;
             border: 1px solid @borderColor;
+            text-align: center;
             cursor: pointer;
             >span{
                 display: inline-block;
@@ -141,6 +154,9 @@ a{
             }
             >ul{
                 position: absolute;
+                left: 0px;
+                top: 100%;
+                width: 100%;
                 text-align: center;
                 background-color: rgba(255,255,255,.8);
                 li{
@@ -158,14 +174,15 @@ a{
                 position: absolute;
                 left: 0px;
                 width: 1000px;
-                
                 padding: 10px 20px;
-                background-color: rgba(255,255,255,.8);
+                background-color: #fff;
                 >div{
                     float: left;
                     width: 28%;
                     height: 120px;
                     margin: 5px 20px;
+                    text-align: left;
+                    text-indent: 5px;
                     h4{
                         margin: 4px 0px;
                         border-bottom: 2px solid @toppicColor;
@@ -173,9 +190,18 @@ a{
                     >a{
                         display: inline-block;
                         width: 45%;
+                        margin: 1px 0px;
+                        font-size: 14px;
+                        color: @fontColor;
+                        &:hover{
+                            color: @fontHoverColor;
+                        }
                     }
                 }
             }
+        }
+        .otherClassify{
+            transform: translateX(-5px);
         }
     }
     .imgPlayBox{
@@ -184,7 +210,7 @@ a{
         .imgContainer{
             img{
                 width: 100%;
-                height: 276px;
+                height: 284px;
             }
         }
         .playHandle{
@@ -195,6 +221,7 @@ a{
 
 
 @perfectColor:rgba(246,146,138,.5);
+//主要内容
 main{
     margin: 50px auto;
     width: 1100px;
@@ -211,7 +238,7 @@ main{
         .moreAnnounce{
             position:absolute;
             top: 0px;
-            right: 10px;
+            right: 0px;
             &:hover{
                 color: @toppicColor;
             }
@@ -219,7 +246,13 @@ main{
         p{
             margin-bottom: 0px;
             .announceContent{
+                display: inline-block;
+                width: 500px;
                 margin-left: 50px;
+                font-size: 14px;
+                overflow:hidden;
+                white-space: nowrap;
+                text-overflow:ellipsis;
                 color: @fontColor;
                 &:hover{
                     color: @fontHoverColor;
@@ -227,6 +260,7 @@ main{
             }
             .announceTime{
                 margin-left: 20px;
+                font-size: 14px;
             }
         }
     }
@@ -347,9 +381,9 @@ main{
                 }
             .more{
                 float: right;
-                &:hover{
-                    color: @toppicColor;
-                }
+                padding: 4px;
+                background-color: @toppicColor;
+                color: #fff;
             }
             .show{
                 >span:first-child{
@@ -432,7 +466,7 @@ main{
         transform:translateX(0px)
     }
 }
-
+// 页脚
 footer{
     padding: 20px 0px;
     text-align: center;
