--- a/src/main/webapp/css/index.css
+++ b/src/main/webapp/css/index.css
@@ -194,6 +194,7 @@ main {
 }
 main .announce {
   position: relative;
+  margin-top: 70px;
   border-bottom: 1px solid rgba(121, 121, 121, 0.6);
   color: #666666;
 }
@@ -252,15 +253,15 @@ main .goodsList {
   position: relative;
   margin: 0px 60px;
   width: 980px;
-  height: 305px;
+  height: 255px;
   overflow: hidden;
   white-space: nowrap;
 }
 main .goodsList .concreteContent {
   display: inline-block;
-  width: 20%;
-  height: 300px;
-  margin: 0px 20px 0px 20px;
+  width: 17%;
+  height: 250px;
+  margin: 0px 13px 0px 13px;
   border: 2px solid rgba(102, 102, 102, 0.7);
   text-align: center;
 }
@@ -269,7 +270,8 @@ main .goodsList .concreteContent img {
   height: 80%;
 }
 main .goodsList .concreteContent p {
-  margin: 4px 0px;
+  margin: 3px 0px;
+  transform: translateY(-6px);
 }
 main .goodsList .concreteContent:hover {
   border: 2px solid rgba(246, 146, 138, 0.5);
@@ -342,7 +344,7 @@ main .specialGoods .specialTitle .borderNew {
 }
 main .specialGoods .specialTitle .more {
   float: right;
-  padding: 4px;
+  padding: 4px 6px;
   background-color: #5d759d;
   color: #fff;
 }
