--- a/src/main/webapp/css/index.css
+++ b/src/main/webapp/css/index.css
@@ -182,19 +182,20 @@ a {
 }
 .topBanner .imgPlayBox {
   width: 100%;
-  height: 244px;
+  height: 284px;
+}
+.topBanner .imgPlayBox .imgContainer {
+  text-align: center;
 }
 .topBanner .imgPlayBox .imgContainer img {
-  width: 100%;
   height: 284px;
 }
 main {
-  margin: 50px auto;
+  margin: 20px auto;
   width: 1100px;
 }
 main .announce {
   position: relative;
-  margin-top: 70px;
   border-bottom: 1px solid rgba(121, 121, 121, 0.6);
   color: #666666;
 }
