--- a/src/main/webapp/less/index.less
+++ b/src/main/webapp/less/index.less
@@ -206,10 +206,10 @@ a{
     }
     .imgPlayBox{
         width: 100%;
-        height: 244px;
+        height: 284px;
         .imgContainer{
+            text-align: center;
             img{
-                width: 100%;
                 height: 284px;
             }
         }
@@ -223,11 +223,10 @@ a{
 @perfectColor:rgba(246,146,138,.5);
 //主要内容
 main{
-    margin: 50px auto;
+    margin: 20px auto;
     width: 1100px;
     .announce{
         position: relative;
-        margin-top: 70px;
         border-bottom: 1px solid rgba(121,121,121,.6);
         color: @fontColor;
         >img{
