--- a/src/main/webapp/less/index.less
+++ b/src/main/webapp/less/index.less
@@ -15,7 +15,7 @@ li{
 
 a{
     text-decoration: none;
-    color: #000;
+    color: inherit;
 }
 
 [v-cloak] {
@@ -161,7 +161,7 @@ a{
                 background-color: rgba(255,255,255,.8);
                 li{
                     width: 100%;
-                    padding: 13px 0px;
+                    padding: 14px 0px;
                     img{
                         width: 12px;
                     }
@@ -209,6 +209,7 @@ a{
         height: 284px;
         .imgContainer{
             text-align: center;
+            background-color: rgba(51,51,51,0.8);
             img{
                 height: 284px;
             }
