--- a/src/main/webapp/css/log.css
+++ b/src/main/webapp/css/log.css
@@ -74,7 +74,7 @@ button {
 .ants {
   position: fixed;
   left: 65%;
-  top: 45%;
+  bottom: 18%;
 }
 .ants img {
   width: 240px;
@@ -98,7 +98,7 @@ button {
 .sea {
   position: fixed;
   bottom: 0px;
-  width: 120%;
+  width: 1920px;
 }
 .sea > img {
   position: absolute;
@@ -300,4 +300,39 @@ button {
 }
 .inputBg .infoInput button:hover {
   background-color: #246c9b;
+}
+.inputBg .picContainer {
+  width: 400px;
+  height: 220px;
+  margin: 13px auto;
+  background-color: #f00;
+}
+.inputBg .slideContainer {
+  position: relative;
+  margin: 0 auto;
+  width: 90%;
+  height: 100px;
+  background-image: url('../img/index/codeBg.png');
+  background-size: 100%;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+.inputBg .slideContainer > img {
+  position: absolute;
+  left: 0px;
+  top: 50%;
+  width: 90px;
+  height: 90px;
+  transform: translateY(-50%);
+}
+.inputBg .slideContainer .slideOver {
+  height: 100px;
+}
+.inputBg .slideContainer .slidIcon {
+  margin: 0px;
+  text-align: center;
+}
+.inputBg .slideContainer .slidIcon > img {
+  margin: 0px 10px;
+  cursor: pointer;
 }
