--- a/src/main/webapp/less/log.less
+++ b/src/main/webapp/less/log.less
@@ -392,6 +392,13 @@ button{
                 margin: 4px 0px;
             }
         }
+        .slideImg{
+            position: absolute;
+            left: 0px;
+            width: 90px;
+            height: 90px;
+            background-color: black;
+        }
     }
     .slideContainer{
         position: relative;
@@ -409,6 +416,7 @@ button{
             width: 90px;
             height: 90px;
             transform: translateY(-50%);
+            cursor: pointer;
         }
         .slideOver{
             height: 100px;
