--- a/src/main/webapp/css/header.css
+++ b/src/main/webapp/css/header.css
@@ -1,3 +1,19 @@
+body {
+  margin: 0px;
+  padding: 0px;
+}
+ul {
+  margin: 0px;
+  padding: 0px;
+}
+li {
+  float: left;
+  list-style: none;
+}
+a {
+  text-decoration: none;
+  color: inherit;
+}
 .topContainer {
   border-bottom: 1px solid rgba(102, 102, 102, 0.5);
 }
