--- a/src/main/webapp/less/header.less
+++ b/src/main/webapp/less/header.less
@@ -1,3 +1,24 @@
+body{
+    margin: 0px;
+    padding: 0px;
+}
+
+ul{
+    margin: 0px;
+    padding: 0px;
+}
+
+li{
+    float: left;
+    list-style: none;
+}
+
+a{
+    text-decoration: none;
+    color: inherit;
+}
+
+
 @toppicColor:#5d759d;
 @topInputColor:rgba(246,146,138,.5);
 @borderColor:rgba(102,102,102,.5);
