--- a/src/main/webapp/css/search.css
+++ b/src/main/webapp/css/search.css
@@ -37,3 +37,87 @@
 .classifyContainer .concreteClassify span {
   padding: 10px 0px;
 }
+.main {
+  display: flex;
+  flex-direction: row;
+  width: 1200px;
+  margin: 0px auto 10px auto;
+}
+.main .mainLeft {
+  display: inline-block;
+  width: 16%;
+  margin-right: 20px;
+}
+.main .mainLeft .leftBlock {
+  border: 1px solid rgba(102, 102, 102, 0.5);
+  margin-bottom: 20px;
+}
+.main .mainLeft .leftBlock .leftTitle {
+  display: inline-block;
+  width: 100%;
+  height: 28px;
+  line-height: 28px;
+  text-align: center;
+  background-color: rgba(102, 102, 102, 0.5);
+}
+.main .mainLeft .arrayBy > div {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+}
+.main .mainLeft .searchInput {
+  display: flex;
+  flex-direction: row;
+  border: 2px solid #5d759d;
+  margin-bottom: 10px;
+}
+.main .mainLeft .searchInput input {
+  width: 146px;
+  border: none;
+  outline: none;
+}
+.main .mainLeft .searchInput img {
+  width: 24px;
+  height: 24px;
+  padding: 3px;
+  background-color: #5d759d;
+}
+.main .mainLeft .classifyNav > ul {
+  display: flex;
+  flex-direction: column;
+  text-indent: 10px;
+}
+.main .mainLeft .classifyNav > ul > li {
+  padding: 5px 0px;
+  cursor: pointer;
+}
+.main .goodsShow {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-content: space-around;
+  justify-content: space-between;
+  width: 100%;
+}
+.main .goodsShow > div {
+  display: flex;
+  flex-direction: column;
+  width: 22%;
+  height: 300px;
+  margin-bottom: 20px;
+  border: 1px solid rgba(102, 102, 102, 0.5);
+}
+.main .goodsShow > div > img {
+  width: 100%;
+}
+.main .goodsShow > div > div {
+  display: flex;
+  justify-content: space-between;
+}
+.main .goodsShow > div > div .goodsPrice {
+  color: #f00;
+}
+.main .goodsShow > div span {
+  margin: 8px 0px;
+  text-indent: 4px;
+}
