--- a/src/main/webapp/less/search.less
+++ b/src/main/webapp/less/search.less
@@ -39,3 +39,93 @@
         }
     }
 }
+
+.main{
+    display: flex;
+    flex-direction: row;
+    width: 1200px;
+    margin: 0px auto 10px auto;
+    .mainLeft{
+        display: inline-block;
+        width: 16%;
+        margin-right: 20px;
+        .leftBlock{
+            border: 1px solid rgba(102,102,102,.5);
+            margin-bottom: 20px;
+            .leftTitle{
+                display: inline-block;
+                width: 100%;
+                height: 28px;
+                line-height: 28px;
+                text-align: center;
+                background-color: rgba(102,102,102,.5);
+            }
+        }
+        .arrayBy{
+            &>div{
+                display: flex;
+                flex-direction: row;
+                justify-content: space-evenly;
+            }
+        }
+        .searchInput{
+            display: flex;
+            flex-direction: row;
+
+            border: 2px solid @toppicColor;
+            margin-bottom: 10px;
+            input{
+                width: 146px;
+                border:none;
+                outline:none;
+            }
+            img{    
+                width: 24px;
+                height: 24px;
+                padding: 3px;
+                background-color: @toppicColor;
+            }
+        }
+        .classifyNav{
+            >ul{
+                display: flex;
+                flex-direction: column;
+                text-indent: 10px;
+                >li{
+                    padding:5px 0px;
+                    cursor: pointer;
+                }
+            }
+        }
+    }
+    .goodsShow{
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        align-content: space-around;
+        justify-content: space-between;
+        width: 100%;
+        &>div{
+            display: flex;
+            flex-direction: column;
+            width: 22%;
+            height: 300px;
+            margin-bottom: 20px;
+            border: 1px solid rgba(102,102,102,.5);
+            &>img{
+                width: 100%;
+            }
+            &>div{
+                display: flex;
+                justify-content: space-between;
+                .goodsPrice{
+                    color: #f00;
+                }
+            }
+            span{
+                margin: 8px 0px;
+                text-indent: 4px;
+            }
+        }
+    }
+}
