副页面样式完善

--- a/src/main/webapp/css/search.css
+++ b/src/main/webapp/css/search.css
@@ -6,6 +6,7 @@
   display: flex;
   flex-direction: row;
   text-align: center;
+  cursor: pointer;
 }
 .classifyContainer .classifyTitle span {
   display: inline-block;
@@ -27,6 +28,7 @@
   display: flex;
   flex-direction: column;
   padding: 10px 0px;
+  cursor: pointer;
 }
 .classifyContainer .concreteClassify {
   display: flex;
@@ -36,6 +38,7 @@
 }
 .classifyContainer .concreteClassify span {
   padding: 10px 0px;
+  cursor: pointer;
 }
 .main {
   display: flex;
@@ -65,6 +68,12 @@
   flex-direction: row;
   justify-content: space-evenly;
 }
+.main .mainLeft .arrayBy > div span {
+  cursor: pointer;
+}
+.main .mainLeft .arrayBy > div .arrayChoose {
+  color: rgba(246, 146, 138, 0.5);
+}
 .main .mainLeft .searchInput {
   display: flex;
   flex-direction: row;
@@ -74,6 +83,7 @@
 .main .mainLeft .searchInput input {
   width: 146px;
   border: none;
+  padding: 0px 5px;
   outline: none;
 }
 .main .mainLeft .searchInput img {
