--- a/src/main/webapp/less/search.less
+++ b/src/main/webapp/less/search.less
@@ -1,4 +1,5 @@
 @toppicColor:#5d759d;
+@topInputColor:rgba(246,146,138,.5);
 
 .classifyContainer{
     width: 1200px;
@@ -7,6 +8,7 @@
         display: flex;
         flex-direction: row;
         text-align: center;
+        cursor: pointer;
         span{
             display: inline-block;
             width: 50%;
@@ -27,6 +29,7 @@
             display: flex;
             flex-direction: column;
             padding: 10px 0px;
+            cursor: pointer;
         }
     }
     .concreteClassify{
@@ -36,6 +39,7 @@
         border: 1px solid rgba(102,102,102,.5);
         span{
             padding: 10px 0px;
+            cursor: pointer;
         }
     }
 }
@@ -66,6 +70,12 @@
                 display: flex;
                 flex-direction: row;
                 justify-content: space-evenly;
+                span{
+                    cursor: pointer;
+                }
+                .arrayChoose{
+                    color: @topInputColor;
+                }
             }
         }
         .searchInput{
@@ -77,6 +87,7 @@
             input{
                 width: 146px;
                 border:none;
+                padding:0px 5px;
                 outline:none;
             }
             img{    
