小图标重命名和样式修改

--- a/src/main/webapp/css/search.css
+++ b/src/main/webapp/css/search.css
@@ -101,6 +101,9 @@
   padding: 5px 0px;
   cursor: pointer;
 }
+.main .mainLeft .classifyNav > ul > li > img {
+  transform: scale(0.6) translateX(10px) translateY(12px);
+}
 .main .mainLeft .classifyNav > ul > li > ul {
   display: flex;
   flex-direction: column;
