--- a/src/main/webapp/less/search.less
+++ b/src/main/webapp/less/search.less
@@ -42,6 +42,34 @@
             cursor: pointer;
         }
     }
+    .hideThi{
+        animation: hideThi .3s linear 0s 1 forwards;
+    }
+    .showThi{
+        animation: showThi .3s linear 0s 1 forwards;
+    }
+}
+
+@keyframes hideThi{
+    0%{
+        opacity: 1;
+        height: 44px;
+    }
+    100%{
+        opacity: 0;
+        height: 0px;
+    }
+}
+
+@keyframes showThi{
+    0%{
+        opacity: 0;
+        height: 0px;
+    }
+    100%{
+        opacity: 1;
+        height: 44px;
+    }
 }
 
 .main{
@@ -117,6 +145,7 @@
                         border-width: 1px 0px;
                         font-size: 12px;
                         color: rgba(102,102,102,.5);
+                        overflow: hidden;
                         .thiIndex{
                             position: relative;
                             &::before{
@@ -166,6 +195,36 @@
                 cursor: pointer;
             }
         }
+    }
+}
+
+.leftThiEnter{
+    opacity: 0;
+    height: 0px;
+    animation:leftEnter .5s linear .5s 1;
+}
+.leftThiLeave{
+    animation:leftEnter .5s reverse;
+}
+@keyframes leftLeave{
+    0%{
+        opacity: 1;
+        height: 168px;
+    }
+    100%{
+        opacity: 0;
+        height: 0px;
+    }
+}
+
+@keyframes leftEnter{
+    0%{
+        opacity: 0;
+        height: 0px;
+    }
+    100%{
+        opacity: 1;
+        height: 168px;
     }
 }
 
