类名绑定修改

--- a/src/main/webapp/less/search.less
+++ b/src/main/webapp/less/search.less
@@ -1,6 +1,10 @@
 @toppicColor:#5d759d;
 @topInputColor:rgba(246,146,138,.5);
 
+[v-cloak] {
+    display: none;
+}
+
 .classifyContainer{
     width: 1200px;
     margin: 0px auto 10px auto;
