--- a/src/main/webapp/less/search.less
+++ b/src/main/webapp/less/search.less
@@ -194,9 +194,30 @@
             }
         }
         .pageTurn{
+            display: flex;
+            flex-direction: row;
+            justify-content: flex-end;
             width: 100%;
+            *{
+                padding: 0px 3px;
+            }
             .turnPage{
                 cursor: pointer;
+            }
+            .pageContainer{
+                display: flex;
+                flex-direction: row;
+                min-width:50px; 
+                justify-content: space-evenly;
+                span{
+                    display: inline-block;
+                    width: 15px;
+                    text-align: center;
+                }
+                .currentPage{
+                    background-color: @topInputColor;
+                    color: #fff;
+                }
             }
         }
     }
