--- a/src/main/webapp/less/search.less
+++ b/src/main/webapp/less/search.less
@@ -213,6 +213,7 @@
                     display: inline-block;
                     width: 15px;
                     text-align: center;
+                    cursor: pointer;
                 }
                 .currentPage{
                     background-color: @topInputColor;
