个人资料页面增加

--- a/src/main/src/assets/less/define.less
+++ b/src/main/src/assets/less/define.less
@@ -12,6 +12,7 @@ body{
 @deepFontColor:#666;
 @shallowFontColor:#bcbcbc;
 @borderColor:#eee;
+@footerColor:#2f416d;
 
 @topInputColor:rgba(246,146,138,.5);
 @deepTopInputColor:rgb(246,146,138);
