用户界面和聊天界面初步

--- a/src/main/src/assets/less/define.less
+++ b/src/main/src/assets/less/define.less
@@ -13,6 +13,10 @@ body{
 @shallowFontColor:#bcbcbc;
 @borderColor:#eee;
 @footerColor:#2f416d;
+@chatDeepBColor:rgba(93,117,157,.7);
+@chatShallowBColor:rgba(93,117,157,.1);
+@chatHalfBcolor:rgba(93,117,157,.5);
+@chatBgColor:rgba(93,117,157,.05);
 
 @topInputColor:rgba(246,146,138,.5);
 @deepTopInputColor:rgb(246,146,138);
